# steppe_game

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  SETTLED_FACTION_AI.md  package-lock.json  package.json  playwright.config.js
data/: unit_types.csv
engine/: main.cpp  steppe_daemon.cpp  steppe_generator.cpp  steppe_generator.h
game/: game_mode.h  game_state.cpp  game_state.h
proxy/: server.js
public/: app.js  index.html  styles.css
scenarios/: ai-town-capture-smoke.json
scripts/: build.ps1  common.ps1  diff.ps1  generate-unit-sprites.ps1  launch.ps1  lint.ps1  smoke.ps1  status.ps1  test.ps1
tests/: ui-layout.spec.js
